<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="66dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:text="@string/first_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/firstName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint = "@string/enter_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_last_name"
        app:layout_constraintStart_toEndOf="@+id/tvLastName"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/tvGrades"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/num_grades"
        app:layout_constraintBaseline_toBaselineOf="@+id/grades"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/grades"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_num_grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvGrades"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <Button
        android:id="@+id/submit"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit_btn"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/grades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/error_message_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/AverageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_message_textview"
        tools:visibility="invisible"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>